--- a/exe/FaceServer/FaceServer.vcxproj.filters
+++ b/exe/FaceServer/FaceServer.vcxproj.filters
@@ -21,9 +21,21 @@
     <ClCompile Include="HTTPServer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="LandmarkExtractor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FacePacket.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="HTTPServer.h">
+      <Filter>Resource Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LandmarkExtractor.h">
+      <Filter>Resource Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FacePacket.h">
       <Filter>Resource Files</Filter>
     </ClInclude>
   </ItemGroup>
